feat: enhance iframe attributes for media playback and add mobile support for progress bar

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div id="playbackContainer">
-            <iframe id="songIframe"></iframe>
+            <iframe id="songIframe" allow="encrypted-media; autoplay" allowtransparency="true"></iframe>
             <div id="desktopPlaybackContainer" >
                 <div id="cover">
                     <img class="coverImg" src="./media/default_image.jpg">
